<resources>
    <string name="app_name">FilmList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="star_film">Star film</string>
    <string name="film_photo">Film photo</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="error_data">Veriler getirilirken hata oluştu</string>
    <string name="try_again">Tekrar dene</string>
    <string name="poster_image">Poster image</string>
    <string name="go_back">Go back</string>
    <string name="content_details">Content Details</string>
    <string name="content">Content</string>
    <string name="search">Search</string>
</resources>