<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".presentation.film_detail.FilmDetailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:contentInsetStartWithNavigation="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetRight="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <!-- Back button -->
    <ImageButton
        android:id="@+id/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/go_back"
        android:layout_gravity="start"
        app:layout_collapseMode="pin" />

    <!-- Title -->
    <TextView
        android:id="@+id/toolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_details"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:ellipsize="end"
        android:singleLine="true" />

    <!-- Star button -->
    <ImageButton
        android:id="@+id/star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/star_film"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        app:layout_collapseMode="pin" />

    </androidx.appcompat.widget.Toolbar>

    <!-- Poster Image -->
    <ImageView
        android:id="@+id/poster"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/poster_image" />

    <!-- Film Detail -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:padding="5dp"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/voteCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>