<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.film_list.FilmListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <androidx.appcompat.widget.Toolbar
            android:visibility="gone"
            android:id="@+id/toolbarSearch"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:contentInsetStartWithNavigation="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            >
            <!-- Search Button -->
            <ImageButton
                android:id="@+id/searchRemoveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/search"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                app:layout_collapseMode="pin" />

            <!-- Search Bar -->
            <EditText
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:text=""
                android:id="@+id/searchBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search"
                android:background="@android:color/transparent"
                android:visibility="visible"
                android:imeOptions="actionSearch"
                android:inputType="text" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:contentInsetStartWithNavigation="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <!-- Title -->
            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:singleLine="true" />


            <!-- Grid & List button -->
            <ImageButton
                android:id="@+id/gridList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/grid"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/star_film"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                app:layout_collapseMode="pin" />

            <!-- Search Button -->
            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/search"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                app:layout_collapseMode="pin" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>